--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
             "email": "italoaraujo788@gmai.com"
         }
     ],
-    "require": {},
+    "require": {
+        "guzzlehttp/guzzle": "~6.0"
+    },
     "autoload": {
         "psr-4": {
             "Zoop\\": "src/"
