Atualizando detalhes do composer

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "code/php",
+    "name": "italodeveloper/zoop-sdk",
     "authors": [
         {
             "name": "Ítalo Araújo",
