--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "optimize-autoloader": true
     },
     "require": {
-        "guzzlehttp/guzzle": "^6.3"
+        "zendframework/zend-http": "~2.5"
     },
     "autoload": {
         "psr-4": {
