Atualizando o Carregameto de dependencias internas da SDK e adicionando nova assoações.

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         }
     ],
     "config": {
-        "optimize-autoloader": true
+        "optimize-autoloader": false
     },
     "require": {
         "php": ">=5.3.23",
