Melhorando Configurações para tranalhar com Zend Http e Guzzle, dando o Zend Http como sujestão de pacote.

--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,17 @@
         }
     ],
     "config": {
-        "optimize-autoloader": false
+        "optimize-autoloader": true
     },
     "require": {
         "php": ">=5.3.23",
-        "ext-curl": "*",
-        "guzzlehttp/guzzle": "^6.3"
+        "ext-curl": "*", 
+        "guzzlehttp/guzzle": "^6.3",
+        "psr/log": "^1.1"
+
+    },
+    "suggest": {
+        "zendframework/zend-http": "~2.5"
     },
     "autoload": {
         "psr-4": {
