Atualizando dependencias do projeto.

--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,15 @@
         }
     ],
     "config": {
+        "cache-files-ttl": 0,
         "optimize-autoloader": true
     },
     "require": {
         "php": ">=5.5",
         "ext-curl": "*", 
         "zendframework/zend-http": "~2.5",
-        "psr/log": "^1.1"
+        "psr/log": "^1.1",
+        "italodeveloper/guzzle-zend": "dev-master"
 
     },
     "autoload": {
