--- a/composer.json
+++ b/composer.json
@@ -20,13 +20,11 @@
     },
     "require": {
         "php": ">=5.5",
-        "psr/log": "^1.1",
         "ext-curl": "*",
-        "italodeveloper/guzzle-zend": "dev-master",
-        "ext-json": "*"
-    },
-    "require-dev": {
-        "zendframework/zend-http": "~2.5"
+        "ext-json": "*",
+        "psr/log": "^1.1",
+        "guzzlehttp/guzzle": "^6.3",
+        "italodeveloper/guzzle-zend": "dev-master"
     },
     "autoload": {
         "psr-4": {
